namespace DigitaleDelta;

public class Measure
{
	public string Uom   { get; set; } = string.Empty;
	public double Value { get; set; }
}